workloads/webapp-deploy.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: webapp 
  name: webapp
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: webapp 
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: hello
        image: nginxdemos/hello
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi    
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10 
          periodSeconds: 10
          timeoutSeconds: 1               
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10 
          periodSeconds: 5
          timeoutSeconds: 1               
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  labels:
    app: webapp 
spec:
  ports:
    - port: 80
  selector:
    app: webapp
  type: LoadBalancer
