workloads/webapp-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: workshop
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
      app: webapp
